grammar/.antlr/GramaticaLatinoParser.java
// Generated from f:/Julian/Universidad/2024-1/Lenguajes de programación/Analizador Semántico/AnalizadorSemanticoV1/grammar/GramaticaLatino.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GramaticaLatinoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, OPASIG=51, OPREL=52, 
		ID=53, CADENA_DE_CARACTERES=54, VALOR_REAL=55, ESP=56, BlockComment=57, 
		LineComment=58;
	public static final int
		RULE_s = 0, RULE_statement = 1, RULE_builtin = 2, RULE_contimprimirf = 3, 
		RULE_auxcontimprimirf = 4, RULE_condicionales = 5, RULE_osi = 6, RULE_sino = 7, 
		RULE_contelegir = 8, RULE_eleccioncaso = 9, RULE_casoexp = 10, RULE_dospara = 11, 
		RULE_trespara = 12, RULE_declfunciones = 13, RULE_returnstat = 14, RULE_idrelated = 15, 
		RULE_dicc = 16, RULE_incdec = 17, RULE_func = 18, RULE_contdeclfunciones = 19, 
		RULE_asig = 20, RULE_auxcual = 21, RULE_auxidasig = 22, RULE_cual = 23, 
		RULE_lista = 24, RULE_auxlista = 25, RULE_dic = 26, RULE_auxdic = 27, 
		RULE_exp = 28, RULE_e = 29, RULE_builtinexp = 30, RULE_auxid = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "statement", "builtin", "contimprimirf", "auxcontimprimirf", "condicionales", 
			"osi", "sino", "contelegir", "eleccioncaso", "casoexp", "dospara", "trespara", 
			"declfunciones", "returnstat", "idrelated", "dicc", "incdec", "func", 
			"contdeclfunciones", "asig", "auxcual", "auxidasig", "cual", "lista", 
			"auxlista", "dic", "auxdic", "exp", "e", "builtinexp", "auxid"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'romper'", "'imprimir'", "'('", "')'", "'escribir'", "'poner'", 
			"'imprimirf'", "'limpiar'", "'acadena'", "','", "'si'", "'fin'", "'elegir'", 
			"'desde'", "';'", "'mientras'", "'para'", "'en'", "'rango'", "'repetir'", 
			"'hasta'", "'osi'", "'sino'", "'caso'", "':'", "'defecto'", "'otro'", 
			"'funcion'", "'fun'", "'retornar'", "'ret'", "'retorno'", "'.'", "'++'", 
			"'--'", "'['", "']'", "'leer'", "'{'", "'}'", "'+'", "'-'", "'verdadero'", 
			"'cierto'", "'falso'", "'nulo'", "'!'", "'alogico'", "'anumero'", "'tipo'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "OPASIG", "OPREL", "ID", "CADENA_DE_CARACTERES", "VALOR_REAL", 
			"ESP", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticaLatino.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaLatinoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<SContext> s() {
			return getRuleContexts(SContext.class);
		}
		public SContext s(int i) {
			return getRuleContext(SContext.class,i);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			statement();
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					s();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IdrelatedContext idrelated() {
			return getRuleContext(IdrelatedContext.class,0);
		}
		public BuiltinContext builtin() {
			return getRuleContext(BuiltinContext.class,0);
		}
		public CondicionalesContext condicionales() {
			return getRuleContext(CondicionalesContext.class,0);
		}
		public DeclfuncionesContext declfunciones() {
			return getRuleContext(DeclfuncionesContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				idrelated();
				}
				break;
			case T__0:
			case T__1:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				builtin();
				}
				break;
			case T__10:
			case T__12:
			case T__13:
			case T__15:
			case T__16:
			case T__19:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				condicionales();
				}
				break;
			case T__27:
			case T__28:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				declfunciones();
				}
				break;
			case T__29:
			case T__30:
			case T__31:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				returnstat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BuiltinContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ContimprimirfContext contimprimirf() {
			return getRuleContext(ContimprimirfContext.class,0);
		}
		public BuiltinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_builtin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterBuiltin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitBuiltin(this);
		}
	}

	public final BuiltinContext builtin() throws RecognitionException {
		BuiltinContext _localctx = new BuiltinContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_builtin);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(T__0);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(T__1);
				setState(80);
				match(T__2);
				setState(81);
				exp(0);
				setState(82);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(T__4);
				setState(85);
				match(T__2);
				setState(86);
				exp(0);
				setState(87);
				match(T__3);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				match(T__5);
				setState(90);
				match(T__2);
				setState(91);
				exp(0);
				setState(92);
				match(T__3);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				match(T__6);
				setState(95);
				match(T__2);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 65300614585778696L) != 0)) {
					{
					setState(96);
					contimprimirf();
					}
				}

				setState(99);
				match(T__3);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				match(T__7);
				setState(101);
				match(T__2);
				setState(102);
				match(T__3);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(103);
				match(T__8);
				setState(104);
				match(T__2);
				setState(105);
				exp(0);
				setState(106);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContimprimirfContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<AuxcontimprimirfContext> auxcontimprimirf() {
			return getRuleContexts(AuxcontimprimirfContext.class);
		}
		public AuxcontimprimirfContext auxcontimprimirf(int i) {
			return getRuleContext(AuxcontimprimirfContext.class,i);
		}
		public ContimprimirfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contimprimirf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterContimprimirf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitContimprimirf(this);
		}
	}

	public final ContimprimirfContext contimprimirf() throws RecognitionException {
		ContimprimirfContext _localctx = new ContimprimirfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_contimprimirf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			exp(0);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(111);
				auxcontimprimirf();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AuxcontimprimirfContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AuxcontimprimirfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_auxcontimprimirf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterAuxcontimprimirf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitAuxcontimprimirf(this);
		}
	}

	public final AuxcontimprimirfContext auxcontimprimirf() throws RecognitionException {
		AuxcontimprimirfContext _localctx = new AuxcontimprimirfContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_auxcontimprimirf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__9);
			setState(118);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalesContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<OsiContext> osi() {
			return getRuleContexts(OsiContext.class);
		}
		public OsiContext osi(int i) {
			return getRuleContext(OsiContext.class,i);
		}
		public SinoContext sino() {
			return getRuleContext(SinoContext.class,0);
		}
		public ContelegirContext contelegir() {
			return getRuleContext(ContelegirContext.class,0);
		}
		public TerminalNode ID() { return getToken(GramaticaLatinoParser.ID, 0); }
		public AsigContext asig() {
			return getRuleContext(AsigContext.class,0);
		}
		public TerminalNode VALOR_REAL() { return getToken(GramaticaLatinoParser.VALOR_REAL, 0); }
		public DosparaContext dospara() {
			return getRuleContext(DosparaContext.class,0);
		}
		public CondicionalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionales; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterCondicionales(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitCondicionales(this);
		}
	}

	public final CondicionalesContext condicionales() throws RecognitionException {
		CondicionalesContext _localctx = new CondicionalesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicionales);
		int _la;
		try {
			setState(194);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__10);
				setState(121);
				exp(0);
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(122);
					statement();
					}
					}
					setState(125); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__21) {
					{
					{
					setState(127);
					osi();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__22) {
					{
					setState(133);
					sino();
					}
				}

				setState(136);
				match(T__11);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(T__12);
				setState(139);
				exp(0);
				setState(140);
				contelegir();
				setState(141);
				match(T__11);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				match(T__13);
				setState(144);
				match(T__2);
				setState(145);
				match(ID);
				setState(146);
				asig();
				setState(147);
				match(T__14);
				setState(148);
				exp(0);
				setState(149);
				match(T__14);
				setState(150);
				statement();
				setState(151);
				match(T__3);
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(152);
					statement();
					}
					}
					setState(155); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				setState(157);
				match(T__11);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				match(T__15);
				setState(160);
				exp(0);
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(161);
					statement();
					}
					}
					setState(164); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				setState(166);
				match(T__11);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 5);
				{
				setState(168);
				match(T__16);
				setState(169);
				match(ID);
				setState(170);
				match(T__17);
				setState(171);
				match(T__18);
				setState(172);
				match(T__2);
				setState(173);
				match(VALOR_REAL);
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(174);
					dospara();
					}
				}

				setState(177);
				match(T__3);
				setState(179); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(178);
					statement();
					}
					}
					setState(181); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				setState(183);
				match(T__11);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 6);
				{
				setState(185);
				match(T__19);
				setState(187); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(186);
					statement();
					}
					}
					setState(189); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				setState(191);
				match(T__20);
				setState(192);
				exp(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OsiContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public OsiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_osi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterOsi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitOsi(this);
		}
	}

	public final OsiContext osi() throws RecognitionException {
		OsiContext _localctx = new OsiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_osi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(T__21);
			setState(197);
			exp(0);
			setState(199); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(198);
				statement();
				}
				}
				setState(201); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SinoContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterSino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitSino(this);
		}
	}

	public final SinoContext sino() throws RecognitionException {
		SinoContext _localctx = new SinoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sino);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(T__22);
			setState(205); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(204);
				statement();
				}
				}
				setState(207); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContelegirContext extends ParserRuleContext {
		public CasoexpContext casoexp() {
			return getRuleContext(CasoexpContext.class,0);
		}
		public EleccioncasoContext eleccioncaso() {
			return getRuleContext(EleccioncasoContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ContelegirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contelegir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterContelegir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitContelegir(this);
		}
	}

	public final ContelegirContext contelegir() throws RecognitionException {
		ContelegirContext _localctx = new ContelegirContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_contelegir);
		int _la;
		try {
			setState(228);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(209);
				match(T__23);
				setState(210);
				casoexp();
				setState(211);
				match(T__24);
				setState(212);
				eleccioncaso();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 2);
				{
				setState(214);
				match(T__25);
				setState(215);
				match(T__24);
				setState(217); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(216);
					statement();
					}
					}
					setState(219); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 3);
				{
				setState(221);
				match(T__26);
				setState(222);
				match(T__24);
				setState(224); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(223);
					statement();
					}
					}
					setState(226); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 9007207577512934L) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EleccioncasoContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ContelegirContext contelegir() {
			return getRuleContext(ContelegirContext.class,0);
		}
		public CasoexpContext casoexp() {
			return getRuleContext(CasoexpContext.class,0);
		}
		public EleccioncasoContext eleccioncaso() {
			return getRuleContext(EleccioncasoContext.class,0);
		}
		public EleccioncasoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eleccioncaso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).enterEleccioncaso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaLatinoListener ) ((GramaticaLatinoListener)listener).exitEleccioncaso(this);
		}
	}
